# app/api/validate.py
@@ -12,7 +12,17 @@ REVIEW_SCHEMA = {
         "star_rating": {"type": "number"},
         "review_headline": {"type": "string"},
         "review_body": {"type": "string"}
-    }
+    },
+    "required": ["product_id", "star_rating"],
+}
+
+UPDATE_REVIEW_SCHEMA = {
+    "$schema": "http://json-schema.org/schema#",
+    "type": "object",
+    "properties": {
+        "review_id": {"type": "string"},
+    },
+    "required": ["review_id"],
 }
 
 
@@ -23,3 +33,7 @@ def validate(schema, payload):
 
 def validate_create_reivew(payload):
     return validate(REVIEW_SCHEMA, payload)
+
+
+def validate_update_reivew(payload):
+    return validate(UPDATE_REVIEW_SCHEMA, payload)
